src/views/Nft/Create/style.module.scss
@use "/src/scss/colors";
@import "/src/styles/fonts";
@import "/src/styles/scrollbar.scss";

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(359deg);
  }
}

.Container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  // justify-content: center;
  margin-top: 90px;
  margin-bottom: 182px;
  min-height: calc(100vh - 410px);

  @media (max-width: 600px) {
    margin-top: 30px;
    margin-bottom: 164px;
    // max-width: 335px;
  }

  .Title {
    font-style: normal;
    @include fontTitle;
    text-align: center;
    color: colors.$textColor1;
    height: 60px;
    margin-bottom: 35px;

    @media (max-width: 600px) {
      height: 42px;
      font-size: 28px;
      line-height: 42px;
      max-width: 240px;
      margin-bottom: 30px;
    }
  }

  .TopSideContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 1173px;
    height: 100%;
    margin-bottom: 70px;

    @media (max-width: 600px) {
      max-width: 335px;
      margin-bottom: 30px;
    }

    .TypeLagInfo {
      margin-right: auto;
      margin-bottom: 15px;
      font-style: normal;
      @include fontLabel;
      color: colors.$primary;
      width: 278px;
      height: 23px;
    }
    .TopSide {
      display: flex;
      justify-content: space-between;
      width: 100%;
      height: 100%;

      @media (max-width: 600px) {
        align-items: center;
        flex-direction: column;
        gap: 34px;
      }
    }

    .LeftSide {
      display: flex;
      flex-direction: column;
      gap: 10px;

      @media (max-width: 600px) {
        gap: 12px;
      }

      div {
        .DropZone {
          width: 500px;

          @media (max-width: 600px) {
            max-width: 335px;
          }

          .TermsAgreement {
            display: flex;
            justify-content: space-between;
            align-items: flex-start;
            width: 100%;
            margin-top: 20px;
            gap: 10px;

            @media (max-width: 600px) {
              margin-top: 12px;
              gap: 10px;
              justify-content: flex-start;
            }

            .CheckBox {
              margin-left: -5px;
              margin-top: -8px;
              transform: scale(1.2);
            }

            .AgreementTxt {
              font-style: normal;
              @include fontLagInfo;
              font-weight: 400;
              color: colors.$textColor1;

              @media (max-width: 600px) {
                max-width: 278px;
                max-height: 75px;
              }
            }
          }
        }
      }
    }

    .RightSide {
      width: 650px;

      @media (max-width: 600px) {
        max-width: 335px;
      }
      .RightTitle {
        font-style: normal;
        @include fontLabel;
        color: colors.$textColor1;
      }

      .TitleDesc {
        font-style: normal;
        @include fontLagInfo;
        font-weight: 400;
        color: colors.$text;
        margin-bottom: 18px;

        div {
          display: inline;
          font-weight: 700;
          text-decoration-line: underline;
          color: #1e4ced;

          &:hover {
            cursor: pointer;
          }
        }
      }

      .CollectionForm {
        gap: 30px;
        .CollectionFormSelect {
          width: 100%;
          background: #ffffff;
          box-shadow: -1px 1px 16px 7px rgba(0, 0, 0, 0.05);
          border-radius: 7px;
          padding-right: 13px;
          padding-left: 15px;
          .SelectCollection {
            font-style: normal;
            @include fontLabel;
            color: colors.$textColor1;
          }

          .SelectType {
            background: colors.$whiteBg;
          }
        }

        .InputWrapper {
          display: flex;
          flex-direction: column;

          .Label {
            font-style: normal;
            @include fontLabel;
            margin-left: 10px;
            color: colors.$greyBg;
            margin-bottom: 5px;
            display: inline;
          }
        }
      }
    }
  }

  .BottomSide {
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
    justify-content: center;

    .Btn {
      margin: auto;
      width: 180px;
      height: 55px;
      // background: #dedede;
      // border-radius: 7px;
      border: none;
      margin-bottom: 13px;

      // &:hover {
      //   background: colors.$gradient_pink2blue;
      //   box-shadow: 8px 8px 25px 6px rgba(0, 0, 0, 0.1);
      //   border-radius: 7px;
      // }
    }

    .CheckedBtn {
      background: colors.$gradient_pink2blue;
      box-shadow: 8px 8px 25px 6px rgba(0, 0, 0, 0.1);
      border-radius: 7px;
    }

    .SpinningIcon {
      margin-top: 3px;
      animation: spin 1.1s linear infinite;
    }

    .Error {
      font-style: normal;
      @include fontError;
      text-align: center;
      color: colors.$errorColor;
    }
  }
}

.IconContainer {
  width: 193px;
  height: 193px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: auto;
  margin: 25px 0;
  border-radius: 7px;

  @media (max-width: 600px) {
    margin-top: 17px;
    margin-bottom: 15px;
    max-height: 109px;

    svg {
      max-width: 79px;
      max-height: 60px;
    }
  }

  img {
    width: 100%;
    height: 100%;
    border-radius: 7px;

    @media (max-width: 600px) {
      max-width: 109px;
      max-height: 109px;
    }
  }
}

.Congrats {
  font-style: normal;
  @include fontProcessTitle;
  text-align: center;
  color: colors.$greyBg;
  margin-bottom: 10px;

  @media (max-width: 600px) {
    font-size: 15px;
    margin-top: 0;
    margin-bottom: 8px;
  }
}

.Created {
  font-style: normal;
  @include fontTypePhrase;
  text-align: center;
  color: colors.$greyBg;

  @media (max-width: 600px) {
    font-size: 12px;
    margin-bottom: 23px;
  }
}

.TokCol {
  color: colors.$primary;

  @media (max-width: 600px) {
    margin-bottom: 40px;
  }
}

.DraftEditorRoot {
  box-sizing: border-box;
  width: 650px;
  height: 185px;
  background: #f3f3f3;
  border: 1.5px solid #e8e8e8;
  border-radius: 7px;
  @include fontTypePhrase;
  padding: 11px 2px 11px 15px;
  @include scrollbar;
  overflow: auto;
}

